--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.7.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.5",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "winston": "^3.11.0"
   },
   "devDependencies": {
