--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "start": "node dist/index.js",
         "generate": "drizzle-kit generate:pg",
         "push": "drizzle-kit push:pg",
+        "pull": "drizzle-kit introspect:pg",
         "studio": "npx drizzle-kit studio",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
