--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "drizzle-orm": "^0.29.1",
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.2",
+        "nodemailer": "^6.9.7",
         "pg": "^8.11.3",
         "winston": "^3.11.0"
     },
@@ -37,6 +38,7 @@
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
         "@types/node": "^20.10.4",
+        "@types/nodemailer": "^6.4.14",
         "@types/pg": "^8.10.9",
         "drizzle-kit": "^0.20.6",
         "eslint": "^8.55.0",
