--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
         "dev": "concurrently -n 'server,client' -c 'green,blue' \"npm run dev:server\" \"npm run dev:client\"",
         "prebuild": "rimraf dist",
         "pre-prod": "rimraf dist && npm run build",
-        "build": "tsc",
-        "start": "node dist/index.js",
+        "build": "tsc && tsc-alias",
+        "start": "pm2 start dist/index.js --name writedaily --instances max",
+        "restart": "pm2 restart writedaily",
         "generate": "drizzle-kit generate:pg",
         "push": "drizzle-kit push:pg",
         "pull": "drizzle-kit introspect:pg",
@@ -29,14 +30,20 @@
         "dotenv": "^16.3.1",
         "drizzle-orm": "^0.29.1",
         "express": "^4.18.2",
+        "express-rate-limit": "^7.1.5",
+        "express-validator": "^7.0.1",
+        "helmet": "^7.1.0",
+        "hpp": "^0.2.3",
         "jsonwebtoken": "^9.0.2",
         "nodemailer": "^6.9.7",
         "pg": "^8.11.3",
-        "winston": "^3.11.0"
+        "winston": "^3.11.0",
+        "xss-clean": "^0.1.4"
     },
     "devDependencies": {
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
+        "@types/hpp": "^0.2.5",
         "@types/node": "^20.10.4",
         "@types/nodemailer": "^6.4.14",
         "@types/pg": "^8.10.9",
@@ -47,6 +54,7 @@
         "nodemon": "^3.0.2",
         "prettier": "^3.1.0",
         "ts-node": "^10.9.2",
+        "tsc-alias": "^1.8.8",
         "tsconfig-paths": "^4.2.0",
         "typescript": "^5.3.3"
     }
