--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,12 +4,13 @@
         "module": "NodeNext", // Specify what module code is generated.
         "moduleResolution": "NodeNext", // Specify how TypeScript looks up a file from a given module specifier.
         "sourceMap": true, // Create source map files for emitted JavaScript files.
-        "outDir": "dist", // Specify an output folder for all emitted files.
+        "outDir": "./dist", // Specify an output folder for all emitted files.
         "esModuleInterop": true, // Emit additional JavaScript to ease support for importing CommonJS modules.
         "forceConsistentCasingInFileNames": true, // Ensure that casing is correct in imports.
         "strict": true, // Enable all strict type-checking options.
         "skipLibCheck": true, // Skip type checking all .d.ts files.
-        "baseUrl": "src", // Set the base URL to the root of your project
+        "baseUrl": "./src", // Set the base URL to the root of your project
+        "allowJs": true,
         "paths": {
             "@utils/*": [
                 "utils/*"
@@ -34,6 +35,9 @@
             ],
             "@db/*": [
                 "db/*"
+            ],
+            "@validation/*": [
+                "validation/*"
             ]
         }
     },
