making some changes for deploy

--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
         "dev:server": "npx nodemon",
         "dev:client": "cd client && npm run dev",
         "dev": "concurrently -n 'server,client' -c 'green,blue' \"npm run dev:server\" \"npm run dev:client\"",
-        "prebuild": "rimraf dist",
+        "prebuild": "npm install && rimraf dist",
         "pre-prod": "rimraf dist && npm run build",
-        "build": "npm run prebuild && tsc && tsc-alias",
+        "build": " npm run prebuild && tsc && tsc-alias",
         "start": "pm2 start dist/index.js --name writedaily --instances max",
         "restart": "pm2 restart writedaily",
         "generate": "drizzle-kit generate:pg",
