--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "dev:server": "npx nodemon",
         "dev:client": "cd client && npm run dev",
         "dev": "concurrently -n 'server,client' -c 'green,blue' \"npm run dev:server\" \"npm run dev:client\"",
-        "prebuild": "npm ci && rimraf dist",
+        "prebuild": "rimraf dist",
         "pre-prod": "rimraf dist && npm run build",
         "build": " npm run prebuild && tsc && tsc-alias",
         "start": "pm2 start dist/index.js --name writedaily --instances max",
