--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "xss-clean": "^0.1.4"
     },
     "devDependencies": {
+        "@types/bcrypt": "^5.0.2",
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
         "@types/hpp": "^0.2.5",
