--- a/client/package.json
+++ b/client/package.json
@@ -9,13 +9,24 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@radix-ui/react-avatar": "^1.0.4",
+        "@radix-ui/react-dialog": "^1.0.5",
+        "@radix-ui/react-dropdown-menu": "^2.0.6",
+        "@radix-ui/react-popover": "^1.0.7",
+        "@radix-ui/react-separator": "^1.0.3",
         "@radix-ui/react-slot": "^1.0.2",
+        "@radix-ui/react-toggle": "^1.0.3",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.0.0",
+        "cmdk": "^0.2.0",
         "lucide-react": "^0.302.0",
         "next": "14.0.4",
         "react": "^18",
         "react-dom": "^18",
+        "slate": "^0.101.5",
+        "slate-history": "^0.100.0",
+        "slate-hyperscript": "^0.100.0",
+        "slate-react": "^0.101.5",
         "tailwind-merge": "^2.2.0",
         "tailwindcss-animate": "^1.0.7"
     },
