--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.0.0",
         "cmdk": "^0.2.0",
+        "is-hotkey": "^0.2.0",
         "lucide-react": "^0.302.0",
         "next": "14.0.4",
         "react": "^18",
@@ -34,6 +35,7 @@
         "tailwindcss-animate": "^1.0.7"
     },
     "devDependencies": {
+        "@types/is-hotkey": "^0.1.10",
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
