--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
         "@radix-ui/react-checkbox": "^1.0.4",
         "@radix-ui/react-dialog": "^1.0.5",
         "@radix-ui/react-dropdown-menu": "^2.0.6",
+        "@radix-ui/react-label": "^2.0.2",
         "@radix-ui/react-popover": "^1.0.7",
         "@radix-ui/react-scroll-area": "^1.0.5",
         "@radix-ui/react-separator": "^1.0.3",
@@ -25,12 +26,14 @@
         "is-hotkey": "^0.2.0",
         "lucide-react": "^0.302.0",
         "next": "14.0.4",
+        "next-themes": "^0.2.1",
         "react": "^18",
         "react-dom": "^18",
         "slate": "^0.101.5",
         "slate-history": "^0.100.0",
         "slate-hyperscript": "^0.100.0",
         "slate-react": "^0.101.5",
+        "sonner": "^1.3.1",
         "tailwind-merge": "^2.2.0",
         "tailwindcss-animate": "^1.0.7"
     },
