--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@radix-ui/react-aspect-ratio": "^1.0.3",
         "@radix-ui/react-avatar": "^1.0.4",
         "@radix-ui/react-checkbox": "^1.0.4",
         "@radix-ui/react-dialog": "^1.0.5",
@@ -29,6 +30,7 @@
         "next-themes": "^0.2.1",
         "react": "^18",
         "react-dom": "^18",
+        "react-resizable-panels": "^1.0.7",
         "slate": "^0.101.5",
         "slate-history": "^0.100.0",
         "slate-hyperscript": "^0.100.0",
