--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@hookform/resolvers": "^3.3.4",
         "@radix-ui/react-aspect-ratio": "^1.0.3",
         "@radix-ui/react-avatar": "^1.0.4",
         "@radix-ui/react-checkbox": "^1.0.4",
@@ -19,6 +20,7 @@
         "@radix-ui/react-scroll-area": "^1.0.5",
         "@radix-ui/react-separator": "^1.0.3",
         "@radix-ui/react-slot": "^1.0.2",
+        "@radix-ui/react-tabs": "^1.0.4",
         "@radix-ui/react-toggle": "^1.0.3",
         "@radix-ui/react-tooltip": "^1.0.7",
         "class-variance-authority": "^0.7.0",
@@ -30,6 +32,7 @@
         "next-themes": "^0.2.1",
         "react": "^18",
         "react-dom": "^18",
+        "react-hook-form": "^7.49.2",
         "react-resizable-panels": "^1.0.7",
         "slate": "^0.101.5",
         "slate-history": "^0.100.0",
@@ -37,7 +40,9 @@
         "slate-react": "^0.101.5",
         "sonner": "^1.3.1",
         "tailwind-merge": "^2.2.0",
-        "tailwindcss-animate": "^1.0.7"
+        "tailwindcss-animate": "^1.0.7",
+        "vaul": "^0.8.0",
+        "zod": "^3.22.4"
     },
     "devDependencies": {
         "@types/is-hotkey": "^0.1.10",
