--- a/client/package.json
+++ b/client/package.json
@@ -23,10 +23,12 @@
         "@radix-ui/react-tabs": "^1.0.4",
         "@radix-ui/react-toggle": "^1.0.3",
         "@radix-ui/react-tooltip": "^1.0.7",
+        "@types/is-url": "^1.2.32",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.0.0",
         "cmdk": "^0.2.0",
         "is-hotkey": "^0.2.0",
+        "is-url": "^1.2.4",
         "lucide-react": "^0.302.0",
         "next": "14.0.4",
         "next-themes": "^0.2.1",
