--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@emoji-mart/data": "^1.1.2",
+        "@emoji-mart/react": "^1.1.1",
         "@hookform/resolvers": "^3.3.4",
         "@radix-ui/react-aspect-ratio": "^1.0.3",
         "@radix-ui/react-avatar": "^1.0.4",
@@ -27,6 +29,7 @@
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.0.0",
         "cmdk": "^0.2.0",
+        "emoji-mart": "^5.5.2",
         "is-hotkey": "^0.2.0",
         "is-url": "^1.2.4",
         "lucide-react": "^0.302.0",
