Add horizontal block

--- a/client/package.json
+++ b/client/package.json
@@ -35,10 +35,12 @@
         "lucide-react": "^0.302.0",
         "next": "14.0.4",
         "next-themes": "^0.2.1",
+        "prismjs": "^1.29.0",
         "react": "^18",
         "react-dom": "^18",
         "react-hook-form": "^7.49.2",
         "react-resizable-panels": "^1.0.7",
+        "react-syntax-highlighter": "^15.5.0",
         "slate": "^0.101.5",
         "slate-history": "^0.100.0",
         "slate-hyperscript": "^0.100.0",
@@ -52,8 +54,10 @@
     "devDependencies": {
         "@types/is-hotkey": "^0.1.10",
         "@types/node": "^20",
+        "@types/prismjs": "^1.26.3",
         "@types/react": "^18",
         "@types/react-dom": "^18",
+        "@types/react-syntax-highlighter": "^15.5.11",
         "autoprefixer": "^10.0.1",
         "eslint": "^8",
         "eslint-config-next": "14.0.4",
