--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,8 @@
         "next-themes": "^0.2.1",
         "prismjs": "^1.29.0",
         "react": "^18",
+        "react-beautiful-dnd": "^13.1.1",
+        "react-dnd-html5-backend": "^16.0.1",
         "react-dom": "^18",
         "react-hook-form": "^7.49.2",
         "react-resizable-panels": "^1.0.7",
@@ -56,6 +58,7 @@
         "@types/node": "^20",
         "@types/prismjs": "^1.26.3",
         "@types/react": "^18",
+        "@types/react-beautiful-dnd": "^13.1.8",
         "@types/react-dom": "^18",
         "@types/react-syntax-highlighter": "^15.5.11",
         "autoprefixer": "^10.0.1",
