Adding upload media features with cloudinary.

--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "dependencies": {
         "@paralleldrive/cuid2": "^2.2.2",
         "bcrypt": "^5.1.1",
+        "busboy": "^1.6.0",
+        "cloudinary": "^1.41.2",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "drizzle-orm": "^0.29.1",
@@ -39,6 +41,7 @@
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.2",
+        "@types/busboy": "^1.5.3",
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
         "@types/hpp": "^0.2.5",
