--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "bcrypt": "^5.1.1",
         "busboy": "^1.6.0",
         "cloudinary": "^1.41.2",
+        "concurrently": "^8.2.2",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "drizzle-orm": "^0.29.1",
