--- a/client/package.json
+++ b/client/package.json
@@ -32,8 +32,10 @@
         "emoji-mart": "^5.5.2",
         "is-hotkey": "^0.2.0",
         "is-url": "^1.2.4",
+        "jsonwebtoken": "^9.0.2",
         "lucide-react": "^0.302.0",
         "next": "14.0.4",
+        "next-auth": "^4.24.5",
         "next-themes": "^0.2.1",
         "prismjs": "^1.29.0",
         "react": "^18",
