--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "express": "^4.18.2",
         "express-rate-limit": "^7.1.5",
         "express-validator": "^7.0.1",
+        "google-auth-library": "^9.6.3",
         "helmet": "^7.1.0",
         "hpp": "^0.2.3",
         "jsonwebtoken": "^9.0.2",
