--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
         "is-url": "^1.2.4",
         "jsonwebtoken": "^9.0.2",
         "lucide-react": "^0.302.0",
+        "moment": "^2.30.1",
         "next": "14.0.4",
         "next-auth": "^4.24.5",
         "next-themes": "^0.2.1",
