--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
         "is-hotkey": "^0.2.0",
         "is-url": "^1.2.4",
         "jsonwebtoken": "^9.0.2",
+        "lodash.debounce": "^4.0.8",
         "lucide-react": "^0.302.0",
         "moment": "^2.30.1",
         "next": "14.0.4",
@@ -60,6 +61,7 @@
     },
     "devDependencies": {
         "@types/is-hotkey": "^0.1.10",
+        "@types/lodash.debounce": "^4.0.9",
         "@types/node": "^20",
         "@types/prismjs": "^1.26.3",
         "@types/react": "^18",
