--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
         "@radix-ui/react-checkbox": "^1.0.4",
         "@radix-ui/react-dialog": "^1.0.5",
         "@radix-ui/react-dropdown-menu": "^2.0.6",
+        "@radix-ui/react-hover-card": "^1.0.7",
         "@radix-ui/react-label": "^2.0.2",
         "@radix-ui/react-popover": "^1.0.7",
         "@radix-ui/react-radio-group": "^1.1.3",
@@ -43,6 +44,7 @@
         "next": "14.0.4",
         "next-auth": "^4.24.5",
         "next-themes": "^0.2.1",
+        "pako": "^2.1.0",
         "prismjs": "^1.29.0",
         "react": "^18",
         "react-beautiful-dnd": "^13.1.1",
@@ -65,6 +67,7 @@
         "@types/is-hotkey": "^0.1.10",
         "@types/lodash.debounce": "^4.0.9",
         "@types/node": "^20",
+        "@types/pako": "^2.0.3",
         "@types/prismjs": "^1.26.3",
         "@types/react": "^18",
         "@types/react-beautiful-dnd": "^13.1.8",
