--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dependencies": {
         "@paralleldrive/cuid2": "^2.2.2",
         "bcrypt": "^5.1.1",
+        "body-parser": "^1.20.2",
         "busboy": "^1.6.0",
         "cloudinary": "^1.41.2",
         "concurrently": "^8.2.2",
